--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "npm run build:sanity && pwd && npm run build:web",
     "build:web": "next build",
     "start:web": "next start",
-    "build:sanity": "cd studio && sanity build ../public/studio -y && cd ..",
-    "start:sanity": "cp .env ./studio/.env.development && cd studio && sanity start",
+    "build:sanity": "cd studio && npx @sanity/cli build ../public/studio -y && cd ..",
+    "start:sanity": "cp .env ./studio/.env.development && cd studio && npx @sanity/cli start",
     "postinstall": "lerna bootstrap"
   },
   "dependencies": {
