Trying out alpha version of sanity-codegen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "lib.d.ts"
+    "lib.d.ts",
+    "schema-types.d.ts"
   ],
   "exclude": [
     "node_modules"
