--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@sanity-codegen/types": "^1.0.0-alpha.0",
     "@sanity/cli": "^2.18.0",
     "@types/express": "^4.17.13",
     "husky": "^7.0.2",
     "lerna": "^4.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.0",
-    "sanity-codegen": "^1.0.0-alpha.11",
     "tailwindcss": "^2.2.13",
     "typescript": "^4.4.2"
   }
