--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lerna": "^4.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.0",
+    "sanity-codegen": "^1.0.0-alpha.11",
     "tailwindcss": "^2.2.13",
     "typescript": "^4.4.2"
   }
