Adding Sanity API version

--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,7 @@
 # For Next
 NEXT_PUBLIC_SANITY_PROJECT_ID="yourId"
 NEXT_PUBLIC_SANITY_DATASET="production"
+NEXT_PUBLIC_SANITY_API_VERSION="2021-09-13"
 SANITY_API_TOKEN="yourToken"
 SANITY_PREVIEW_SECRET="yourSecret"
 
