--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.3.6",
+    "react-icons": "^4.3.1",
     "swr": "^1.0.0"
   },
   "devDependencies": {
