--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "generate:types": "npx sanity-codegen schema-codegen"
   },
   "dependencies": {
+    "@sanity/block-content-to-markdown": "^0.0.5",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.21.10",
     "@sanity/image-url": "^1.0.1",
@@ -27,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
+    "simple-react-lightbox": "^3.6.9-0",
     "swr": "^1.0.1"
   },
   "devDependencies": {
