--- a/studio/package.json
+++ b/studio/package.json
@@ -11,6 +11,7 @@
 	],
 	"dependencies": {
 		"@sanity/base": "^2.0.5",
+		"@sanity/color-input": "^2.22.3",
 		"@sanity/components": "^2.0.5",
 		"@sanity/core": "^2.0.5",
 		"@sanity/default-layout": "^2.0.5",
@@ -21,6 +22,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.3.6",
-		"sanity-plugin-asset-source-unsplash": "^0.1.3"
+		"sanity-plugin-asset-source-unsplash": "^0.1.3",
+		"styled-components": "^5.3.3"
 	}
 }
