--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
+    "react-masonry-css": "^1.0.16",
     "simple-react-lightbox": "^3.6.9-0",
     "swr": "^1.0.1"
   },
